<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SdnCardMonitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_device_name_hint">Input Device Name</string>
    <string name="add_device_ip_hint">Input Device ip</string>
    <string name="total">" Total:       "</string>
    <string name="warning">" Warning: "</string>
    <string name="error">" Error:       "</string>
    <string name="unconnect">" Noncon: "</string>
    <string name="current">"   Current:"</string>
    <string name="url">"http://10.79.41.44:8388/restconf/operations/generalcli:get-generalcli"</string>
</resources>
