<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/content_bg"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/iconsize"
                    android:layout_height="@dimen/iconsize"
                    android:background="@drawable/circle_green" />

                <TextView
                    android:id="@+id/tv_overall_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total" />
            </LinearLayout>
            
            <TextView
                android:layout_height="@dimen/icongap"
                android:layout_width="fill_parent" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/iconsize"
                    android:layout_height="@dimen/iconsize"
                    android:background="@drawable/circle_yellow" />

                <TextView
                    android:id="@+id/tv_overall_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warning" />
            </LinearLayout>

            <TextView
                android:layout_height="@dimen/icongap"
                android:layout_width="fill_parent" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/iconsize"
                    android:layout_height="@dimen/iconsize"
                    android:background="@drawable/circle_red" />

                <TextView
                    android:id="@+id/tv_overall_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error" />
            </LinearLayout>
            
            <TextView
                android:layout_height="@dimen/icongap"
                android:layout_width="fill_parent" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/iconsize"
                    android:layout_height="@dimen/iconsize"
                    android:background="@drawable/circle_gray" />

                <TextView
                    android:id="@+id/tv_overall_unconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unconnect" />
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current" />

            <Spinner
                android:id="@+id/sp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- 
       <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/arrow_left" />
        
        <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/arrow_right" />
         -->
        
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
